# interview_agent

./: .gitignore  InteviewUI.jsx  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/: LLM.py  STT.py  TTS.py  interview_router.py
tests/: test_interview_ws.py
