[project]
name = "interview-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "pytest>=9.1.0",
    "speechrecognition>=3.17.0",
    "uvicorn>=0.46.0",
]
